examples/test/testpolicy13338.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13338
  namespace: namespace380
spec:
  podSelector:
    matchLabels:
      key35: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value10
          key5: value45
          key45: value7
      podSelector:
        matchLabels:
          key45: value36
          key4: value14
